# EchoBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  RAILWAY_GUIDE.md  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  railway.json
custom_filters/: channel_admin.py  custom.py
db/: engine.py
db/models/: __init__.py  admin.py  base.py  channel_settings.py  user.py
db/repos/: admin_repo.py  channel_settings_repo.py  user_repo.py
locales/: ar.json  bg.json  bn.json  da.json  de.json  en.json  es.json  fi.json  fr.json  he.json  hi.json  id.json  it.json  ja.json  ko.json  ms.json  nl.json  no.json  pl.json  pt.json  ru.json  sk.json  sv.json  ta.json  tl.json  tr.json  uk.json  zh.json
migrations/: env.py
migrations/versions/: 193d48aeada4_reconstruct_schema.py  b7a7c57ca504_initial_schema.py  e1a2b3c4d5e6_ensure_bigint_ids.py  fd40c080f91a_use_biginteger_for_ids.py
plugins/: donate.py
plugins/admin_panel/: panel.py
plugins/bot/: about.py  sync_logic.py
plugins/forward/: handler.py
plugins/middleware/: logger.py
plugins/user_panel/: panel.py
scripts/: make_migration.py  translate.py  translate_locales.py
src/: config.py  main.py
src/core/: context.py
src/db/: engine.py
src/filters/: channel_admin.py  custom.py
src/locales/: ar.json  bg.json  bn.json  da.json  de.json  en.json  es.json  fi.json  (+20 more)
tests/: conftest.py  test_admin_panel.py  test_config.py  test_database.py  test_queue_logic.py  test_user_panel.py
utils/: commands.py  decorators.py  i18n.py  rate_limit.py  translator.py  ui.py
(+20 files in other folders)
